feat: http、javascript

--- a/javascript/md/常考基础点.md
+++ b/javascript/md/常考基础点.md
@@ -137,8 +137,202 @@ NaN > 0 // false
 0 > NaN // false
 ```
 
-### this
+### 深浅拷贝
 
-如何正确判断 this？箭头函数的 this 是什么？
+- 浅拷贝
 
+浅拷贝实现比较简单。
 
+1. Object.assgin()
+2. ... 扩展运算符
+
+- 深拷贝
+
+1. JSON.parse(JSON.stringify(object))
+
+    这个方法实际项目不可行，存在问题。
+
+    - 会忽略 undefined
+    - 会忽略 symbol
+    - 不能序列化函数
+
+    ```javascript
+    let a = {
+      age: undefined,
+      sex: Symbol('male'),
+      jobs: function() {},
+      name: 'yck'
+    }
+    let b = JSON.parse(JSON.stringify(a))
+    console.log(b) // {name: "yck"}
+    ```
+
+    - 不能解决循环引用的对象
+
+    ```javascript
+    let obj = {
+      a: 1,
+      b: {
+        c: 2,
+        d: 3,
+      },
+    }
+    obj.c = obj.b
+    obj.e = obj.a
+    obj.b.c = obj.c
+    obj.b.d = obj.b
+    obj.b.e = obj.b.c
+    let newObj = JSON.parse(JSON.stringify(obj))
+    console.log(newObj); // 报错
+    ```
+好的深拷贝实践可以使用lodash/deepClone
+
+### 原型继承和 Class 继承
+
+- 组合继承
+
+1. 构造函数：子类的构造函数继承父类的属性
+2. 原型：子类的原型指向父类的构造函数来继承父类
+
+```javascript
+function Parent(value) {
+  this.value = value;
+}
+
+Parent.prototype.play = function() {
+  console.log(this.value);
+}
+
+function Child(value) {
+  Parent.call(this, value);
+}
+
+Child.prototype = new Parent();
+
+const child = new Child(1);
+child.play();
+
+```
+
+优点：构造函数可以传参，不会与父类引用属性共享，可以复用父类的函数。
+缺点：在继承父类函数的时候调用了父类构造函数，导致子类的原型上多了不需要的父类属性，存在内存上的浪费。
+
+- 寄生组合继承
+
+优化了组合继承缺点
+
+1. 将父类原型赋值给子类
+2. 将构造函数设置为子类
+
+```javascript
+function Parent(value) {
+  this.val = value
+}
+Parent.prototype.play = function() {
+  console.log(this.val)
+}
+
+function Child(value) {
+  Parent.call(this, value)
+}
+Child.prototype = Object.create(Parent.prototype, {
+  constructor: {
+    value: Child,
+    enumerable: false,
+    writable: true,
+    configurable: true
+  }
+})
+
+const child = new Child(1)
+
+child.play() // 1
+child instanceof Parent // true
+```
+
+- class继承
+
+```javascript
+class Parent {
+  constructor(value) {
+    this.val = value
+  }
+  getValue() {
+    console.log(this.val)
+  }
+}
+class Child extends Parent {
+  constructor(value) {
+    super(value)
+  }
+}
+let child = new Child(1)
+child.getValue() // 1
+child instanceof Parent // true
+
+```
+
+class 实现继承的核心在于使用 extends 表明继承自哪个父类，并且在子类构造函数中必须调用 super，因为这段代码可以看成 Parent.call(this, value)。
+
+### 模块化
+
+为什么要使用模块化？都有哪几种方式可以实现模块化，各有什么特点？
+
+使用模块化好处：
+
+- 解决命名冲突
+- 提高代码可复用性
+- 提高代码可维护性
+
+1. 立即执行函数
+
+```javascript
+(function(globalVariable){
+   globalVariable.test = function() {}
+   // ... 声明各种变量、函数都不会污染全局作用域
+})(globalVariable)
+```
+
+2. AMD 和 CMD
+
+```javascript
+// AMD
+define(['./a', './b'], function(a, b) {
+  // 加载模块完毕可以使用
+  a.do()
+  b.do()
+})
+// CMD
+define(function(require, exports, module) {
+  // 加载模块
+  // 可以把 require 写在函数体的任意地方实现延迟加载
+  var a = require('./a')
+  a.doSomething()
+})
+```
+
+3. CommonJS
+
+```javascript
+// a.js
+module.exports = {
+    a: 1
+}
+// or 
+exports.a = 1
+
+// b.js
+var module = require('./a.js')
+module.a // -> log 1
+```
+
+4. ES Module
+
+```javascript
+// 引入模块 API
+import XXX from './a.js'
+import { XXX } from './a.js'
+// 导出模块 API
+export function a() {}
+export default function() {}
+```
