--- a/http/md/键入网址再按下回车，后面究竟发生了什么？.md
+++ b/http/md/键入网址再按下回车，后面究竟发生了什么？.md
@@ -38,7 +38,16 @@
 
 https
 
-    - 
+    - 加密
+        为了机密性，不可以使用明文传输，改成密文传输，就对报文采用对称加密，
+        对称加密产生一个密钥，拥有这个密钥就可以解密，这个密钥会带在报文中传输，会被窃取，存在密钥交换问题；
+        为了解决这一问题，出现了非对称加密，产生两个密钥（公钥、私钥），公钥加密报文，私钥解密报文，公钥传输中带上，私钥自己保存，由于计算非对称加密计算过程复杂，出现混合加密；
+        对称加密加密报文，非对称加密加密对称加密密钥。
+        明文加密成功了，但是一些有心人可以通过长期窃取密文，推算，尝试模拟给服务发送信息，破解。产生数字签名
+    - 数字签名
+        利用摘要算法的到一串随机数，利用非对称加密，私钥加密，公钥解密，双方对比这串随机数。由于公钥在传输中携带，所有人可见，公钥容易被伪造，出现了CA证书。
+    - CA证书
+        证书一层层信任，直至根证书，自己信任。
 
 3. 渲染页面
 
